--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         <div class="map">
             <div style="max-width:100%;overflow:hidden;color:rgb(36, 35, 35);width:400px;height:400px;">
                 <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
-                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Institut+lathian+perindustrian+ilp+kuala+langat+banting+selangor&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
-                
+                    <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Institut+lathian+perindustrian+ilp+kuala+langat+banting+selangor&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+                    </iframe>  
+                </div>
         </div>
         <div class="footer" style="background-color:rgb(13, 14, 14); width: 3500px;">
             <a href="https://www.facebook.com/" target="_blank"><i><img class="image_1" src="image/facebook.png" alt=""></i></a>
